<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.GridLayout
        android:id="@+id/GridLayoutOuter"
        android:layout_width="360dp"
        android:layout_height="360dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:alwaysDrawnWithCache="true"
        android:background="@drawable/board"
        android:clickable="true"
        android:focusable="true"
        android:saveEnabled="true"
        android:visibility="visible"
        app:columnCount="3"
        app:columnOrderPreserved="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeader"
        app:rowCount="3"
        app:rowOrderPreserved="true">

        <ImageView
            android:id="@+id/imageViewTopLeft"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:clickable="true"
            android:contentDescription="@string/imageviewtopleft"
            android:focusable="true"
            android:onClick="onClick"
            android:visibility="visible"
            app:layout_column="0"
            app:layout_row="0" />

        <ImageView
            android:id="@+id/imageViewTopCenter"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:clickable="true"
            android:contentDescription="@string/imageviewtopcenter"
            android:focusable="true"
            android:onClick="onClick"
            android:visibility="visible"
            app:layout_column="1"
            app:layout_row="0" />

        <ImageView
            android:id="@+id/imageViewTopRight"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:clickable="true"
            android:contentDescription="@string/imageviewtopright"
            android:focusable="true"
            android:onClick="onClick"
            android:visibility="visible"
            app:layout_column="2"
            app:layout_row="0" />

        <ImageView
            android:id="@+id/imageViewMiddleLeft"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:clickable="true"
            android:contentDescription="@string/imageviewmiddleleft"
            android:focusable="true"
            android:onClick="onClick"
            android:visibility="visible"
            app:layout_column="0"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/imageViewMiddleCenter"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:clickable="true"
            android:contentDescription="@string/imageviewmiddlecenter"
            android:focusable="true"
            android:onClick="onClick"
            android:visibility="visible"
            app:layout_column="1"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/imageViewMiddleRight"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:clickable="true"
            android:contentDescription="@string/imageviewmiddleright"
            android:focusable="true"
            android:onClick="onClick"
            android:visibility="visible"
            app:layout_column="2"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/imageViewBottomLeft"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:clickable="true"
            android:contentDescription="@string/imageviewbottomleft"
            android:focusable="true"
            android:onClick="onClick"
            android:visibility="visible"
            app:layout_column="0"
            app:layout_row="2" />

        <ImageView
            android:id="@+id/imageViewBottomCenter"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:clickable="true"
            android:contentDescription="@string/imageviewbottomcenter"
            android:focusable="true"
            android:onClick="onClick"
            android:visibility="visible"
            app:layout_column="1"
            app:layout_row="2" />

        <ImageView
            android:id="@+id/imageViewBottomRight"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:clickable="true"
            android:contentDescription="@string/imageviewbottomright"
            android:focusable="true"
            android:onClick="onClick"
            android:visibility="visible"
            app:layout_column="2"
            app:layout_row="2" />

    </android.support.v7.widget.GridLayout>

    <TextView
        android:id="@+id/textViewHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="176dp"
        android:text="@string/connect3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>